refactor: adjust video demo section layout size

--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
             </div>
             
             <div class="row justify-content-center">
-                <div class="col-12 col-md-8 col-lg-6">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="video-wrapper">
                         <video 
                             id="demo-video" 
-                            class="demo-video w-100 h-auto" 
+                            class="demo-video w-100" 
                             controls 
                             preload="metadata"
                             poster="https://raw.githubusercontent.com/ghorbani-mohammad/Flutter-English-AI-Assistant/main/screenshot-01.png">
