fix: update footer links to point to GitHub and LinkedIn

--- a/index.html
+++ b/index.html
@@ -301,9 +301,8 @@
                 </div>
                 <p>Learn English with the power of AI - Your personal English learning companion</p>
                 <div class="footer-social">
-                    <a href="#"><i class="fab fa-github"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/ghorbani-mohammad/Flutter-English-AI-Assistant"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/company/english-ai/"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
             <div class="footer-bottom">
